Update styling and form

--- a/src/views/index.pug
+++ b/src/views/index.pug
@@ -8,7 +8,7 @@ html
     body
         h1 Matrix controller
         form(role="form" method="POST" action="/")
-            select(name="mediaType" onchange="this.form.submit()")
+            select(name="mediaType" show="1000" onchange="this.form.submit()")
                 option(value="nyancat") Nyan Cat
                 option(value="aoe") Age of Empires
                 option(value="bb8") BB8
