--- a/src/views/index.css
+++ b/src/views/index.css
@@ -11,3 +11,8 @@ h1 {
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
     Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
 }
+
+form {
+  width: 100%;
+  padding: 20px;
+}
