--- a/src/views/index.pug
+++ b/src/views/index.pug
@@ -10,11 +10,11 @@ html
         form(role="form" method="POST" action="/")
             div
                 span
-                    input(value="nyancat" id="nyancat" name="mediaType" onchange="this.form.submit()")
+                    inputtype="radio" (value="nyancat" id="nyancat" name="mediaType" onchange="this.form.submit()")
                     label(for="nyancat") Nyan Cat
                 span
-                    input(value="aoe" id="aoe" name="mediaType" onchange="this.form.submit()")
+                    input(type="radio" value="aoe" id="aoe" name="mediaType" onchange="this.form.submit()")
                     label(for="aoe") Age of Empires
                 span
-                    input(value="bb8" id="bb8" name="mediaType" onchange="this.form.submit()")
+                    input(type="radio" value="bb8" id="bb8" name="mediaType" onchange="this.form.submit()")
                     label(for="bb8") BB8
