--- a/src/views/index.pug
+++ b/src/views/index.pug
@@ -10,7 +10,7 @@ html
         form(role="form" method="POST" action="/")
             div
                 span
-                    inputtype="radio" (value="nyancat" id="nyancat" name="mediaType" onchange="this.form.submit()")
+                    input(type="radio" value="nyancat" id="nyancat" name="mediaType" onchange="this.form.submit()")
                     label(for="nyancat") Nyan Cat
                 span
                     input(type="radio" value="aoe" id="aoe" name="mediaType" onchange="this.form.submit()")
