testing public folder

--- a/src/views/index.pug
+++ b/src/views/index.pug
@@ -11,7 +11,8 @@ html
             div
                 span
                     input(type="radio" value="nyancat" id="nyancat" name="mediaType" onchange="this.form.submit()")
-                    label(for="nyancat") Nyan Cat
+                    label(for="nyancat")
+                        img(src="/geek/nyancat.gif")
                 span
                     input(type="radio" value="aoe" id="aoe" name="mediaType" onchange="this.form.submit()")
                     label(for="aoe") Age of Empires
