--- a/src/views/index.pug
+++ b/src/views/index.pug
@@ -10,12 +10,54 @@ html
         form(role="form" method="POST" action="/")
             div
                 span
+                    input(type="radio" value="" id="" name="mediaType" onchange="this.form.submit()")
+                    label(for="")
+                        img(src="/.gif")
+                span
+                    input(type="radio" value="bird" id="bird" name="mediaType" onchange="this.form.submit()")
+                    label(for="bird")
+                        img(src="/zen/bird.gif")
+                span
+                    input(type="radio" value="city" id="city" name="mediaType" onchange="this.form.submit()")
+                    label(for="city")
+                        img(src="/city.gif")
+                span
+                    input(type="radio" value="city-cat" id="city-cat" name="mediaType" onchange="this.form.submit()")
+                    label(for="city-cat")
+                        img(src="/zen/city-cat.gif")
+                span
+                    input(type="radio" value="fish" id="fish" name="mediaType" onchange="this.form.submit()")
+                    label(for="fish")
+                        img(src="/zen/fish.gif")
+                span
+                    input(type="radio" value="train-cat" id="train-cat" name="mediaType" onchange="this.form.submit()")
+                    label(for="train-cat")
+                        img(src="/zen/train-cat.gif")
+                span
                     input(type="radio" value="nyancat" id="nyancat" name="mediaType" onchange="this.form.submit()")
                     label(for="nyancat")
                         img(src="/geek/nyancat.gif")
                 span
                     input(type="radio" value="aoe" id="aoe" name="mediaType" onchange="this.form.submit()")
-                    label(for="aoe") Age of Empires
+                    label(for="aoe")
+                        img(src="/geek/aoe.gif")
                 span
                     input(type="radio" value="bb8" id="bb8" name="mediaType" onchange="this.form.submit()")
-                    label(for="bb8") BB8
+                    label(for="bb8")
+                        img(src="/geek/bb8.gif")
+                span
+                    input(type="radio" value="avengers" id="avengers" name="mediaType" onchange="this.form.submit()")
+                    label(for="avengers")
+                        img(src="/geek/avengers.gif")
+                span
+                    input(type="radio" value="musk" id="musk" name="mediaType" onchange="this.form.submit()")
+                    label(for="musk")
+                        img(src="/geek/musk.gif")
+                span
+                    input(type="radio" value="dogue" id="dogue" name="mediaType" onchange="this.form.submit()")
+                    label(for="dogue")
+                        img(src="/geek/dogue.gif")
+                span
+                    input(type="radio" value="art" id="art" name="mediaType" onchange="this.form.submit()")
+                    label(for="art")
+                        img(src="/weird/art.gif")
