--- a/src/views/index.pug
+++ b/src/views/index.pug
@@ -9,10 +9,10 @@ html
         h1 Matrix controller
         form(role="form" method="POST" action="/")
             div
-                span
-                    input(type="radio" value="" id="" name="mediaType" onchange="this.form.submit()")
-                    label(for="")
-                        img(src="/.gif")
+                //- span
+                //-     input(type="radio" value="" id="" name="mediaType" onchange="this.form.submit()")
+                //-     label(for="")
+                //-         img(src="/.gif")
                 span
                     input(type="radio" value="bird" id="bird" name="mediaType" onchange="this.form.submit()")
                     label(for="bird")
@@ -20,7 +20,7 @@ html
                 span
                     input(type="radio" value="city" id="city" name="mediaType" onchange="this.form.submit()")
                     label(for="city")
-                        img(src="/city.gif")
+                        img(src="/zen/city.gif")
                 span
                     input(type="radio" value="city-cat" id="city-cat" name="mediaType" onchange="this.form.submit()")
                     label(for="city-cat")
