--- a/src/views/index.pug
+++ b/src/views/index.pug
@@ -4,6 +4,7 @@ html
         title Exploring the Pug template
         style
             include index.css
+        meta(name="viewport" content="width=device-width, initial-scale=1")
       
     body
         h1 Matrix controller
