--- a/src/views/index.css
+++ b/src/views/index.css
@@ -23,6 +23,12 @@ div {
   flex-wrap: wrap;
 }
 
+span {
+  display: flex;
+  width: fit-content;
+  height: fit-content;
+}
+
 input {
   visibility: hidden;
   width: 0;
@@ -30,7 +36,17 @@ input {
   margin: 0;
 }
 
+label {
+  display: flex;
+}
+
 img {
   cursor: pointer;
   width: 140px;
+}
+
+@media (min-width: 700px) {
+  img {
+    width: 200px;
+  }
 }
