--- a/src/views/index.css
+++ b/src/views/index.css
@@ -27,6 +27,7 @@ span {
   display: flex;
   width: fit-content;
   height: fit-content;
+  padding: 5px;
 }
 
 input {
@@ -42,7 +43,7 @@ label {
 
 img {
   cursor: pointer;
-  width: 140px;
+  width: 120px;
 }
 
 @media (min-width: 700px) {
