--- a/src/views/index.css
+++ b/src/views/index.css
@@ -20,7 +20,7 @@ form {
 div {
   padding: 20px;
   display: flex;
-  justify-content: center;
+  justify-content: space-between;
   flex-wrap: wrap;
 }
 
