--- a/src/views/index.css
+++ b/src/views/index.css
@@ -11,6 +11,7 @@ body {
 h1 {
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
     Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+  color: white;
 }
 
 form {
