--- a/src/views/index.css
+++ b/src/views/index.css
@@ -21,7 +21,7 @@ form {
 div {
   padding: 20px;
   display: flex;
-  justify-content: space-evenly;
+  justify-content: center;
   flex-wrap: wrap;
 }
 
@@ -29,7 +29,7 @@ span {
   display: flex;
   width: fit-content;
   height: fit-content;
-  padding: 5px;
+  padding: 10px;
 }
 
 input {
