--- a/src/views/index.pug
+++ b/src/views/index.pug
@@ -1,13 +1,13 @@
 doctype html
 html
     head
-        title Exploring the Pug template
+        title Retro Display
         style
             include index.css
         meta(name="viewport" content="width=device-width, initial-scale=1")
       
     body
-        h1 Matrix controller
+        h1 Retro Display
         form(role="form" method="POST" action="/")
             div
                 //- span
