--- a/src/views/index.css
+++ b/src/views/index.css
@@ -1,3 +1,5 @@
+@import url("https://fonts.googleapis.com/css2?family=VT323&display=swap");
+
 body {
   margin: 0 auto;
   width: 100vw;
@@ -12,6 +14,8 @@ h1 {
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
     Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
   color: white;
+  font-family: "VT323", monospace;
+  text-transform: uppercase;
 }
 
 form {
