--- a/src/views/index.pug
+++ b/src/views/index.pug
@@ -62,3 +62,9 @@ html
                     input(type="radio" value="art" id="art" name="mediaType" onchange="this.form.submit()")
                     label(for="art")
                         img(src="/weird/art.gif")
+        div
+            p
+                | Made with 
+                img(src='/assets/heart.png')
+                |  by 
+                a(href='https://github.com/RamonValk' target='_blank') this guy
