--- a/src/views/index.pug
+++ b/src/views/index.pug
@@ -9,7 +9,7 @@ html
     body
         h1 Retro Display
         form(role="form" method="POST" action="/")
-            div
+            div(class="content")
                 //- span
                 //-     input(type="radio" value="" id="" name="mediaType" onchange="this.form.submit()")
                 //-     label(for="")
@@ -62,7 +62,7 @@ html
                     input(type="radio" value="art" id="art" name="mediaType" onchange="this.form.submit()")
                     label(for="art")
                         img(src="/weird/art.gif")
-        div
+        div(class="footer")
             p
                 | Made with 
                 img(src='/assets/heart.png')
