--- a/src/views/index.css
+++ b/src/views/index.css
@@ -1,4 +1,4 @@
-@import url("https://fonts.googleapis.com/css2?family=VT323&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Source+Code+Pro&family=VT323&display=swap");
 
 body {
   margin: 0 auto;
@@ -73,4 +73,5 @@ label > img {
   color: white;
   display: flex;
   align-items: center;
+  font-family: "Source Code Pro", monospace;
 }
