--- a/src/views/index.pug
+++ b/src/views/index.pug
@@ -64,7 +64,7 @@ html
                         img(src="/weird/art.gif")
         div(class="footer")
             p
-                | Made with 
+                | Made with&nbsp;
                 img(src='/assets/heart.png')
-                |  by 
+                |  by&nbsp;
                 a(href='https://github.com/RamonValk' target='_blank') this guy
