--- a/src/views/index.pug
+++ b/src/views/index.pug
@@ -66,5 +66,5 @@ html
             p
                 | Made with&nbsp;
                 img(src='/assets/heart.png')
-                |  by&nbsp;
+                | &nbsp;by&nbsp;
                 a(href='https://github.com/RamonValk' target='_blank') this guy
