--- a/src/views/index.css
+++ b/src/views/index.css
@@ -7,7 +7,7 @@ body {
   display: flex;
   flex-direction: column;
   align-items: center;
-  background: rgb(18, 18, 18);
+  background: #121212;
 }
 
 h1 {
