--- a/src/views/index.pug
+++ b/src/views/index.pug
@@ -5,6 +5,9 @@ html
         style
             include index.css
         meta(name="viewport" content="width=device-width, initial-scale=1")
+        meta(name="theme-color" content="#383838")
+        meta(name="msapplication-navbutton-color" content="#383838")
+        meta(name="apple-mobile-web-app-status-bar-style" content="#383838")
       
     body
         h1 Retro Display
