--- a/src/views/index.pug
+++ b/src/views/index.pug
@@ -73,6 +73,10 @@ html
                     input(type="radio" value="art" id="art" name="mediaType" onchange="this.form.submit()")
                     label(for="art")
                         img(src="/weird/art.gif")
+                span
+                    input(type="radio" value="vapor" id="vapor" name="mediaType" onchange="this.form.submit()")
+                    label(for="vapor")
+                        img(src="/geek/vapor.gif")
         div(class="footer")
             p
                 | Made with
