--- a/src/views/index.pug
+++ b/src/views/index.pug
@@ -77,9 +77,11 @@ html
                     input(type="radio" value="vapor" id="vapor" name="mediaType" onchange="this.form.submit()")
                     label(for="vapor")
                         img(src="/geek/vapor.gif")
-            div(class="footer")
-                p
-                    | Made with
-                    img(src='/assets/heart.png')
-                    | by&nbsp;
-                    a(href='https://github.com/RamonValk' target='_blank') @RamonValk
+            div
+                button(type="button" value="close" name="mediaType" onchange="this.form.submit()") stoppennu
+        div(class="footer")
+            p
+                | Made with
+                img(src='/assets/heart.png')
+                | by&nbsp;
+                a(href='https://github.com/RamonValk' target='_blank') @RamonValk
