--- a/src/views/index.pug
+++ b/src/views/index.pug
@@ -78,7 +78,7 @@ html
                     label(for="vapor")
                         img(src="/geek/vapor.gif")
             div
-                button(type="button" value="close" name="mediaType" onchange="this.form.submit()") stoppennu
+                button(type="button" value="close" name="mediaType" onclick="this.form.submit()") stoppennu
         div(class="footer")
             p
                 | Made with
