--- a/src/views/index.pug
+++ b/src/views/index.pug
@@ -77,8 +77,8 @@ html
                     input(type="radio" value="vapor" id="vapor" name="mediaType" onchange="this.form.submit()")
                     label(for="vapor")
                         img(src="/geek/vapor.gif")
-            div
-                button(type="button" value="close" name="mediaType" onclick="this.form.submit()") stoppennu
+            //- div
+            //-     button(type="button" value="close" name="mediaType" onclick="this.form.submit()") stoppennu
         div(class="footer")
             p
                 | Made with
